--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
     </div>
 
-    <script src="../common/js/base.js"></script>
+    <script src="./common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/data.home.js"></script>
     <script>
