--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-logo">
                             <a href="#" class="navbar-logo_link">
-                                <img src="../common/image/logo.png" alt="writing">
+                                <img src="./common/image/logo.png" alt="writing">
                             </a>
                         </div>
                         <div class="navbar-about">
@@ -107,7 +107,7 @@
                     <div class="footer-heading row no-gutters">
                         <div class="footer-logo l-6 m-6">
                             <a href="#" class="footer-logo_link">
-                                <img src="../common/image/logo.png" alt="Writing">
+                                <img src="./common/image/logo.png" alt="Writing">
                             </a>
                         </div>
                         <div class="footer-rules l-6 m-6">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Đăng nhập</h1>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Đăng ký tài khoản</h1>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Quên mật khẩu</h1>
