--- a/post.html
+++ b/post.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../common/image/logo.png" type="image/x-icon">
+    <link rel="icon" href="./common/image/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../common/fontawesome/css/all.css">
-    <link rel="stylesheet" href="../common/css/base.css">
-    <link rel="stylesheet" href="../common/css/grid.css">
-    <link rel="stylesheet" href="../common/css/style.css">
+    <link rel="stylesheet" href="./common/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./common/css/base.css">
+    <link rel="stylesheet" href="./common/css/grid.css">
+    <link rel="stylesheet" href="./common/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/body.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
@@ -27,7 +27,7 @@
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-logo">
                             <a href="./index.html" class="navbar-logo_link">
-                                <img src="../common/image/logo.png" alt="writing">
+                                <img src="./common/image/logo.png" alt="writing">
                             </a>
                         </div>
                         <div class="navbar-about">
@@ -99,7 +99,7 @@
                     <div class="footer-heading row no-gutters">
                         <div class="footer-logo l-6 m-6">
                             <a href="#" class="footer-logo_link">
-                                <img src="../common/image/logo.png" alt="Writing">
+                                <img src="./common/image/logo.png" alt="Writing">
                             </a>
                         </div>
                         <div class="footer-rules l-6 m-6">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Đăng nhập</h1>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Đăng ký tài khoản</h1>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="modal-content_header">
                     <div class="modal-content_logo">
-                        <img src="../common/image/logo.png" alt="logo">
+                        <img src="./common/image/logo.png" alt="logo">
                     </div>
                     <div class="modal-content_title">
                         <h1>Quên mật khẩu</h1>
@@ -252,7 +252,7 @@
         </div>
     </div>
 
-    <script src="../common/js/base.js"></script>
+    <script src="./common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/data.post.js"></script>
 
