--- a/client/write.html
+++ b/client/write.html
@@ -192,7 +192,7 @@
                         var data = new FormData()
                         data.append('image', file)
 
-                        const image = await fetch('http://localhost:8080/api/v1/post/image', {
+                        const image = await fetch('https://writting.herokuapp.com/api/v1/post/image', {
                             method: "POST",
                             headers: {
                                 "Authorization": `Bearer ${localStorage.getItem("accessToken")}`,
