--- a/post.html
+++ b/post.html
@@ -271,7 +271,7 @@
 
             // console.log(name);
             // console.log(password);
-            fetch('http://localhost:8080/api/v1/auth/login', 
+            fetch('https://writting.herokuapp.com/api/v1/auth/login', 
                 {
                     method: 'POST',
                     headers: {
