--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
             // console.log(name);
             // console.log(password);
-            fetch('https://writting.herokuapp.com/api/v1/auth/login', 
+            fetch('https://nvc-rest-blog.herokuapp.com/api/v1/auth/login', 
                 {
                     method: 'POST',
                     headers: {
