--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
             </div>
         </div>
     </div>
+    
+    <script>alert("Server đang sập, chưa tìm được cách khắc phục :D")</script>
 
     <script src="./common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
