--- a/client/home.html
+++ b/client/home.html
@@ -157,6 +157,10 @@
             </div>
         </div>
     </div>
+    
+    <script>
+        alert("Server đang lỗi - Error 500");
+    </script>
 
     <script src="../common/js/base.js"></script>
     <script src="./assets/js/data.home.js"></script>
