--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
     </div>
     
-    <script>alert("Server đang lỗi - Error 500 status")</script>
+    <script>alert("Server đang lỗi - Error 500 status\nVui lòng đợi khoảng chừng là chục giây =))")</script>
 
     <script src="./common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
