--- a/guest/index.html
+++ b/guest/index.html
@@ -277,18 +277,19 @@
 
             // console.log(name);
             // console.log(password);
-            fetch('http://localhost:8080/api/v1/auth/login', 
+            fetch('https://localhost:44377/api/auth/login',
                 {
                     method: 'POST',
                     headers: {
                         'Accept': 'application/json',
                         'Content-Type': 'application/json'
                     },
-                    body:JSON.stringify({ usernameOrEmail: name , password: password }),
+                    body:JSON.stringify({ email: name , password: password }),
                 }
             )
             .then(res=>res.json())
-            .then(data=>{
+            .then(response =>{
+                const data = response.data;
                 var token = data.accessToken;
                 if (token === undefined) {
                     alert("Email hoặc mật khẩu không chính xác!");
