Refactor post url

--- a/client/home.html
+++ b/client/home.html
@@ -188,7 +188,7 @@
                     let html = `
                         <div class="col l-3 m-4 s-12">
                             <div class="content-post_new">
-                                <a style="cursor: pointer" href="./post.html#${post.id}" class="post-link content-post_link">
+                                <a style="cursor: pointer" href="./post.html#${post.id}/${post.title}" class="post-link content-post_link">
                                     <div class="content-post_image" style="background-image: url(${post.thumbnail});">
                                     </div>
                                 </a>
