--- a/guest/index.html
+++ b/guest/index.html
@@ -193,6 +193,14 @@
                     <div class="modal-content_forget__pass">
                         <span class="forget_pass__submit forget_pass-btn">Quên mật khẩu?</span>
                     </div>
+                    <div class="modal-content_oauth">
+                        <div class="oauth-google_btn oauth_icon">
+                            <i class="fa-brands fa-google"></i>
+                        </div>
+                        <div class="oauth-github_btn oauth_icon">
+                            <i class="fa-brands fa-github"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="modal-content_register modal-content" style="display: none;">
